2010-02-19  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Added comments to new statistical functions.
	Added support for log4x  in statistical functions.

2010-02-18	Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/Core.pm: Restored documentation lost in one of the
	last commits.


	* man/man3/PandoraFMS::Core.pm.3: Updated manpage with the restored 
	documentatrestored 
	documentation

2010-02-18	Pablo de la Concepción <pablo.concepcion@artica.es>

	* lib/PandoraFMS/Core.pm: Modified to use the new tables 
	(tgis_data_history and tgis_data_status).

	* man/man3/PandoraFMS::Core.pm.3: Updated manpage with the new 
	documentation

2010-02-18  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf: New option, self_monitoring.

	* lib/PandoraFMS/Config.pm: Support for new option self_monitoring.

	* lib/PandoraFMS/Core.pm: 	Access update is not refreshed by network 
	modules anymore (gaining a lot of performance here). Added new functions
	for internal statistics and automonitoring.

	* lib/PandoraFMS/Tools.pm: New funtions for self_monitoring.

	* bin/pandora_server: Modified error handler to avoid show info about bad
	load of some optional libraries. 
	Modified general loop of maintance tasks in three
	blocks: high, medium and low latency. Placed here in fixed steps (5, 30 and
	one minute) all tasks pending before by server_threshold. Added 
	self_monitoring and internal statistic mode (for group and servers).

	* util/pandora_db.pl: Update tconfig with last time of database maintance 
	time 

2010-02-15	Pablo de la Concepción <pablo.concepcion@artica.es>

	* conf/pandora_server.conf, lib/PandoraFMS/Config.pm: New configuration 
	parameters: recon_reverse_geolocation_mode, recon_reverse_geolocation_file,
	recon_location_scatter_radius. As now the Recon Server can try to geolocate
	an agent when it's found by revers geoip location. 

	* lib/PandoraFMS/Core.pm: Added first version of POD documentation to 